# llm-do

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  TODO.md  new_provider_script.py  pydantic-ai-blocking-approval  pyproject.toml  solid-review.prose  subagents-pydantic-ai
.agent/: Dockerfile  Dockerfile.python  Dockerfile.typescript  agent  compose.yaml
.claude/: settings.json  skills
.claude/hooks/: auto-commit.sh  session-capture.sh  session-orient.sh  validate-note.sh
.foam/templates/: note.md  research.md
.gemini/: settings.json
.github/workflows/: tests.yml
.prose/: state.json
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
arscontexta/: CLAUDE.md
arscontexta/inbox/: traits-research-report.md
arscontexta/manual/: configuration.md  getting-started.md  manual.md  meta-skills.md  skills.md  troubleshooting.md  workflows.md
arscontexta/ops/: config.yaml  derivation-manifest.md  derivation.md  tasks.md
arscontexta/self/: identity.md  (+1 more)
docs/: architecture.md  bootstrapping.md  cli.md  concept.md  concept_spec.md  dependency_injection.md  indexes.md  pydanticai_architecture.md  reference.md  runtime.md  sandbox.md  scopes.md  templatecall-motivation.md  templatecall.md  theory.md  tool_approval.md  toolset-state.md  ui.md  worker_delegation.md  worker_pitfalls.md
examples/: README.md  greeter.yaml
experiments/context_runtime/: .gitignore  README.md  code_entry_demo.py  context-centric-architecture-design.md  ctx.py  demo.py  entries.py  example_tools.py  greeter_demo.py  llm_do.py  pitchdeck_demo.py  pydanticai-tool-standalone.md  pyproject.toml  registry.py  run_worker.py  tool_calling_model.py  worker_file_demo.py
experiments/context_runtime/examples/: code_entry_demo.py  demo.py  example_tools.py  file_tools.py  greeter.worker  greeter_demo.py  pitchdeck_demo.py  worker_file_demo.py
experiments/context_runtime/src/: __init__.py  ctx.py  entries.py  worker_file.py
llm_do/: __init__.py  agent_toolset.py  approval.py  base.py  cli.py  cli_async.py  cli_display.py  config.py  config_overrides.py  context.py  custom_toolset.py  delegation_toolset.py  execution.py  executor.py  file_sandbox.py  filesystem_sandbox.py  filesystem_toolset.py  model_compat.py  models.py  oauth_cli.py  plugin.py  program.py  project.py  prompts.py  protocols.py  registry.py  runtime.py  sandbox_v2.py  shell.py  shell_toolset.py  tool_approval.py  tool_context.py  tool_registry.py  tools.py  tools_files.py  tools_template_call.py  toolset_loader.py  types.py  worker_sandbox.py  workshop.py
manual/: configuration.md  getting-started.md  manual.md  meta-skills.md  skills.md  troubleshooting.md  workflows.md
ops/: config.yaml  derivation-manifest.md  derivation.md  next-log.md  tasks.md
scratch/: pydantic-ai-stateless-agent-issue.md
scripts/: analyze_imports.py  generate_notes_index.py  ralph-config.sh  ralph-sloc-check.sh  ralph-sloc-loop.sh  ralph-sloc-prompt.md  ralph.README.md  sync_topic_links.py
self/: goals.md  identity.md  methodology.md
tasks/: README.md
templates/: index.md  note.md  observation.md
tests/: README.md  conftest.py  conftest_models.py  test_bootstrapper.py  test_cli_async.py  test_config.py  test_config_overrides.py  test_custom_tools.py  test_display_backends.py  test_examples.py  test_executor.py  test_files_tool.py  test_filesystem.py  test_filesystem_sandbox.py  test_filesystem_toolset.py  test_integration_live.py  test_model_compat.py  test_model_registry.py  test_nested_worker_hang.py  test_oauth_anthropic.py  test_oauth_pkce.py  test_oauth_storage.py  test_plugin.py  test_program.py  test_project.py  test_prompts.py  test_pydanticai_base.py  test_pydanticai_cli.py  test_pydanticai_integration.py  test_scenario_models.py  test_server_side_tools.py  test_shell.py  test_shell_cwd.py  test_sync_topic_links.py  test_template_call_tool.py  test_tool_approval.py  test_tool_entry_point.py  test_toolset_args_validation.py  test_worker_delegation.py  test_workflow_context.py  (+2 more)
(+1062 files in other folders)
