[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-do"
version = "0.2.0"
description = "Template-first workflows and toolboxes for the llm CLI"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "llm>=0.26",
    "PyYAML",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-do"
Issues = "https://github.com/yourusername/llm-do/issues"
Documentation = "https://github.com/yourusername/llm-do"

[project.entry-points.llm]
do = "llm_do.plugin"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_do*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
