[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-do"
version = "0.3.0"
description = "Self-contained prompt workers for LLM orchestration, built on PydanticAI"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.13",
    "pydantic>=2.7",
    "pydantic-ai-blocking-approval>=0.9.0",
    "httpx>=0.25.0",
    "PyYAML",
    "jinja2>=3.0",
    "rich>=13.0",
    "textual>=1.0.0",
    "pytest>=9.0.1",
    "python-frontmatter>=1.0.0",
    "python-slugify>=8.0",
]

[project.scripts]
llm-do = "llm_do.cli.main:main"
llm-do-oauth = "llm_do.cli.oauth:main"

[project.urls]
Homepage = "https://github.com/yourusername/llm-do"
Issues = "https://github.com/yourusername/llm-do/issues"
Documentation = "https://github.com/yourusername/llm-do"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_do*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--ignore=tests/live/",
    "--ignore=examples/",
    "-m not custom_deps",
]
markers = [
    "live: tests that hit real external services",
    "custom_deps: tests that require optional/custom dependency extras",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
